feat: Add Vite proxy for mobile access, fix CORS, increase z-index for mobile sidebar, and add Architecture Guide